@@ -5,7 +5,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
-import org.modelmapper.ModelMapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -18,6 +17,7 @@ import com.codingmonkey.studentmanagement.entity.SubjectEntity;
 import com.codingmonkey.studentmanagement.entity.TeacherEntity;
 import com.codingmonkey.studentmanagement.exception.NotFoundException;
 import com.codingmonkey.studentmanagement.exception.TeacherDetailsException;
+import com.codingmonkey.studentmanagement.mapper.TeacherMapper;
 import com.codingmonkey.studentmanagement.repositories.SubjectRepository;
 import com.codingmonkey.studentmanagement.repositories.TeacherRepository;
 
@@ -27,26 +27,34 @@ public class TeacherServiceImpl implements TeacherService {
   private static final Logger LOGGER = LoggerFactory.getLogger(TeacherServiceImpl.class);
   private final TeacherRepository teacherRepository;
   private final SubjectRepository subjectRepository;
-  private final ModelMapper modelMapper;
+  private final TeacherMapper teacherMapper;
 
   public TeacherServiceImpl(final TeacherRepository teacherRepository,
                             @Autowired final SubjectRepository subjectRepository,
-                            @Autowired final ModelMapper modelMapper) {
+                            @Autowired final TeacherMapper teacherMapper) {
     this.teacherRepository = teacherRepository;
     this.subjectRepository = subjectRepository;
-    this.modelMapper = modelMapper;
+    this.teacherMapper = teacherMapper;
   }
 
   @Override
   public List<TeacherResponseDTO> getAllTeachers() {
-    return teacherRepository.findAll().stream().map(this::convertEntityToDto).collect(Collectors.toList());
+    return teacherRepository.findAll().stream().map(teacherEntity -> {
+      TeacherResponseDTO teacherResponseDTO = teacherMapper.teacherEntityToDto(teacherEntity);
+      teacherResponseDTO.setSubjects(getSubjects(teacherEntity));
+      return teacherResponseDTO;
+    }).toList();
   }
 
   @Override
   public List<TeacherResponseDTO> getTeacherByFirstNameAndLastName(String firstName, String lastName) {
     List<TeacherEntity> teacherEntityList = teacherRepository.findByFirstNameAndLastName(firstName, lastName);
     if (!teacherEntityList.isEmpty()) {
-      return teacherEntityList.stream().map(this::convertEntityToDto).collect(Collectors.toList());
+      return teacherEntityList.stream().map(teacherEntity -> {
+        TeacherResponseDTO teacherResponseDTO = teacherMapper.teacherEntityToDto(teacherEntity);
+        teacherResponseDTO.setSubjects(getSubjects(teacherEntity));
+        return teacherResponseDTO;
+      }).toList();
     }
     throw new NotFoundException("Did not find Teacher with first name " + firstName + " last name " + lastName);
   }
@@ -77,9 +85,9 @@ public class TeacherServiceImpl implements TeacherService {
       throw new NotFoundException("Did not find teacher with first name " + teacherDTO.getFirstName() + " last name "
           + teacherDTO.getLastName());
     }
-    modelMapper.map(teacherDTO, teacherEntity);
+    TeacherResponseDTO teacherResponseDTO = teacherMapper.updateTeacherEntityFromDto(teacherDTO, teacherEntity);
     teacherRepository.save(teacherEntity);
-    TeacherResponseDTO teacherResponseDTO = modelMapper.map(teacherEntity, TeacherResponseDTO.class);
+
     teacherResponseDTO.setSubjects(getSubjects(teacherEntity));
     return teacherResponseDTO;
   }
@@ -88,7 +96,11 @@ public class TeacherServiceImpl implements TeacherService {
   public List<TeacherResponseDTO> getTeacherByFirstName(final String firstName) {
     List<TeacherEntity> teacherEntityList = teacherRepository.findByFirstName(firstName);
     if (!teacherEntityList.isEmpty()) {
-      return teacherEntityList.stream().map(this::convertEntityToDto).collect(Collectors.toList());
+      return teacherEntityList.stream().map(teacherEntity -> {
+        TeacherResponseDTO teacherResponseDTO = teacherMapper.teacherEntityToDto(teacherEntity);
+        teacherResponseDTO.setSubjects(getSubjects(teacherEntity));
+        return teacherResponseDTO;
+      }).toList();
     }
     throw new NotFoundException("Did not find Teacher with first name " + firstName);
   }
@@ -97,16 +109,21 @@ public class TeacherServiceImpl implements TeacherService {
   public List<TeacherResponseDTO> getTeacherByLastName(final String lastName) {
     List<TeacherEntity> teacherEntityList = teacherRepository.findByLastName(lastName);
     if (!teacherEntityList.isEmpty()) {
-      return teacherEntityList.stream().map(this::convertEntityToDto).collect(Collectors.toList());
+      return teacherEntityList.stream().map(teacherEntity -> {
+        TeacherResponseDTO teacherResponseDTO = teacherMapper.teacherEntityToDto(teacherEntity);
+        teacherResponseDTO.setSubjects(getSubjects(teacherEntity));
+        return teacherResponseDTO;
+      }).toList();
     }
     throw new NotFoundException("Did not find Teacher with last name " + lastName);
   }
 
   private TeacherResponseDTO saveTeacherDetailsToDB(final TeacherRequestDTO teacherDTO) {
-    TeacherEntity teacherEntity = modelMapper.map(teacherDTO, TeacherEntity.class);
+    TeacherEntity teacherEntity = teacherMapper.teacherDtoToEntity(teacherDTO);
+
     teacherRepository.save(teacherEntity);
-    TeacherResponseDTO teacherResponseDTO = modelMapper.map(teacherEntity, TeacherResponseDTO.class);
-    teacherResponseDTO.setSubjects(teacherDTO.getSubjects());
+    TeacherResponseDTO teacherResponseDTO = teacherMapper.teacherEntityToDto(teacherEntity);
+    teacherResponseDTO.setSubjects(getSubjects(teacherEntity));
     return teacherResponseDTO;
   }
 
@@ -117,7 +134,7 @@ public class TeacherServiceImpl implements TeacherService {
       throw new TeacherDetailsException("Provide Teacher gender type", HttpStatus.BAD_REQUEST);
     } else if (Optional.ofNullable(teacherDTO.getSubjects()).isEmpty()) {
       throw new TeacherDetailsException("Provide Teacher subjects", HttpStatus.BAD_REQUEST);
-    } else if (!new HashSet<>(getSubjects(modelMapper.map(teacherDTO, TeacherEntity.class))).containsAll(
+    } else if (!new HashSet<>(getSubjects(teacherMapper.teacherDtoToEntity(teacherDTO))).containsAll(
         teacherDTO.getSubjects())) {
       throw new TeacherDetailsException("Provide proper subjects", HttpStatus.BAD_REQUEST);
     }
@@ -126,17 +143,6 @@ public class TeacherServiceImpl implements TeacherService {
   @Override
   public void deleteById(final int teacherId) {
     teacherRepository.deleteById(teacherId);
-  }
-
-  private TeacherResponseDTO convertEntityToDto(TeacherEntity teacherEntity) {
-    TeacherResponseDTO teacherDTO = new TeacherResponseDTO();
-    teacherDTO.setFirstName(teacherEntity.getFirstName());
-    teacherDTO.setLastName(teacherEntity.getLastName());
-    teacherDTO.setEmail(teacherEntity.getEmail());
-    teacherDTO.setMobileNumber(teacherEntity.getMobileNumber());
-    teacherDTO.setGender(teacherEntity.getGender());
-    teacherDTO.setSubjects(getSubjects(teacherEntity));
-    return teacherDTO;
   }
 
   private List<String> getSubjects(final TeacherEntity teacherEntity) {
